--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,11 +23,12 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
 r.SkinCache.CompileShaders=True
 
-r.RayTracing=True
+r.RayTracing=False
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.PathTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
