--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=01B321C14CA2A47EB87B298BDD2A6441
-ProjectName=Third Person BP Game Template
+ProjectName=Final Witness
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
